--- a/CreativeZone/CommunityBalancer.csproj
+++ b/CreativeZone/CommunityBalancer.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <GameDir>D:\Games\Steam\steamapps\common\Endzone - A World Apart\Endzone_Data\Managed\</GameDir>
+    <GameDir>C:\Program Files (x86)\Steam\steamapps\common\Endzone - A World Apart\Endzone_Data\Managed\</GameDir>
   </PropertyGroup>
 
   <ItemGroup>
